# smbpls_2026

./: README.md  pyproject.toml  scvi_smbpls_Ray.ipynb  setup.py  simulate_data.py  smbpls_scvi.ipynb  smbpls_scvi_complete.ipynb
data/: simulate_data.py
notebooks/: smbpls_scvi_complete.ipynb
smbpls/: __init__.py  model.py
smbpls/train/: train_smbpls.py
