[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "smbpls"
version = "0.1.0"
description = "Sparse Multi-Block Partial Least Squares implemented in PyTorch"
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "Ray Zhang" }
]

dependencies = [
  "torch",
  "numpy",
  "scikit-learn",
  "matplotlib"
]

[project.optional-dependencies]
omics = ["scanpy", "anndata", "mudata"]
scvi = ["scvi-tools"]
dev = ["pytest", "black", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["smbpls*"]
